--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "type-check": "tsc"
   },
   "dependencies": {
+    "csv-parse": "^4.16.3",
     "ethers": "^5.4.6",
     "lodash": "^4.17.21",
     "loot-rarity": "^4.1.0",
@@ -17,6 +18,7 @@
     "timeago.js": "^4.0.2"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.175",
     "@types/node": "^12.12.21",
     "@types/react": "^17.0.2",
     "@types/react-dom": "^17.0.1",
@@ -25,5 +27,10 @@
     "prettier": "^2.3.2",
     "tailwindcss": "^2.2.8",
     "typescript": "^4.4.2"
-  }
+  },
+  "name": "robes.market",
+  "version": "1.0.0",
+  "main": "index.js",
+  "repository": "https://github.com/Adventure-Cards/robes.market",
+  "license": "MIT"
 }
